Tue Apr 17 13:20:07 2001  George Lebl <jirka@5z.com>

	* basep-widget.[ch], gnome-panep-properties.c, main.c, panel-util.c,
	  panel-widget.[ch], panel.c, panel_config_global.h, session.[ch]:
	  Fix bug #17076, so now there is a auto show delay.  By default it
	  is 0, which is the current behaviour.  Also changed the scale for
	  the autohide delay to be maximum of 3000 not 10000.  I mean who
	  wants the delay to be 10s.  This was making the setting hard to
	  do since the useful range was very thin.  Some other cleanups
	  and a warning fix.

Mon Apr 09 18:02:27 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.c: gah! add missing show for the icon entry hack

2001-04-02  Fatih Demir <kabalak@gtranslator.org>

	* panel.soundlist: Small update of the Turkish entry.

Fri Mar 30 16:33:38 2001  George Lebl <jirka@5z.com>

	* menu-properties.c, panel-util.c: use the icon hack properly and
	  set the default icon BEFORE we hack the icon entry to avoid
	  icons reverting bug which was very annoying.

Thu Mar 29 11:46:53 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c:  remove the configure hack as
	  apparently sawfish isn't too happy with it, this reintroduces the
	  bug where you can lose panels by dragging them off in deskguide,
	  but oh well.

	* extern.c: make the "loading" image be 18x18 instead of 24x24 to fix
	  bugs with drivemounts being separated

	* xstuff.c: ignore panel windows when checking for swallows and
	  status windows, and don't check for status windows on task changes,
	  just on task new.

2001-03-28  jacob berkman  <jacob@ximian.com>

	* foobar-widget.c (set_the_task_submenu): make this a scrolled
	menu, yo

Mon Mar 26 23:35:29 2001  George Lebl <jirka@5z.com>

	* global-keys.c: activate things on key press not release

Tue Mar 20 04:19:03 2001  George Lebl <jirka@5z.com>

	* launcher.c, session.c, foobar-widget.c: #warning is a gcc specific
	  feature, so don't use

Mon Mar 12 15:28:53 2001  George Lebl <jirka@5z.com>
