@@ -1,3 +1,7 @@
+Thu Apr 19 12:26:44 2001  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, menu.c:  Add tooltips to menu and to hide buttons
+
 Tue Apr 17 13:20:07 2001  George Lebl <jirka@5z.com>
 
 	* basep-widget.[ch], gnome-panep-properties.c, main.c, panel-util.c,
